[package]
name = "groundhog"
version = "0.2.2"
description = "A rolling timer abstraction"
repository = "https://github.com/groundhog"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies.once_cell]
version = "1.8.0"
optional = true

[features]
default = []
u128 = []
instant = ["std", "once_cell"]
std = []

[package.metadata.docs.rs]
all-features = true
